# webworkers-ghcjs

./: .gitignore  README.md  bootstrap.sh  build.sh  stack.yaml  static_content  webworker-ghcjs.cabal  webworker.cabal
app/: Main.hs  Routing.hs
config/: server_map.json
html/: install_fetch_handler.js  req.js  static-dynamic  webworker.html
lib/GHCJS/DOM/: FetchEvent.hs  WebWorker.hs
lib/WebWorker/: FetchEvent.hs  Promise.hs  Response.hs  WebWorker.hs
src/: Lib.hs
