name:                webworker-ghcjs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/webworker#readme
license:             BSD3
license-file:        LICENSE
author:              Balaji Rao
maintainer:          balajirrao@gmail.com
copyright:           2018 Balaji Rao
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:    lib
  ghc-options:       -Wall
  build-depends:     ghcjs-base
                   , ghcjs-dom
                   , base
                   , mtl
  exposed-modules:   WebWorker.WebWorker
                   , WebWorker.FetchEvent
                   , WebWorker.Promise
                   , WebWorker.Response
  default-language:  Haskell2010

executable webworker-ghcjs
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Routing                        
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , ghcjs-dom
                     , unordered-containers
                     , aeson
                     , file-embed
                     , template-haskell
                     , webworker-ghcjs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/balajirrao/webworker-ghcjs