name:                webworker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/webworker#readme
license:             BSD3
license-file:        LICENSE
author:              Balaji Rao
maintainer:          balajirrao@gmail.com
copyright:           2018 Balaji Rao
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , ghcjs-dom
  default-language:    Haskell2010

executable webworker-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , webworker
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/webworker